--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>hello，Git & GitHub！</h1>
+  <div><img src="img_hello_world.jpg" alt="Hello World from Space"style="width:100%;max-width:960px"></div>
   <p>this is first line update for git </p>
   <p>new line for our file !!</p>
 </body>
