--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>hello，Git & GitHub！</h1>
   <p>this is first line update for git </p>
-  <p>new line for our file !!</p>
+  <p>This line is here to show how merging works.</p>
 </body>
 </html>
