Add hello git image

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <div><img src="img_hello_world.jpg" alt="Hello World from Space"style="width:100%;max-width:960px"></div>
   <p>this is first line update for git </p>
   <p>new line for our file !!</p>
+  <img src="img_hello_git.jpg" alt="Hello Git Image">
 </body>
 </html>
