--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <h1>hello，Git & GitHub！</h1>
-  <div><img src="img_hello_world.jpg" alt="Hello World from Space"style="width:100%;max: width 640px;px"></div>
-  <p>this is first line update for git </p>
-<<<<<<< HEAD
+  <div>
+    <img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%; max-width:640px;">
+  </div>
+
+  <p>this is first line update for git</p>
   <p>This line is here to show how merging works.</p>
-=======
-  <p>new line for our file !!</p>
+
   <img src="img_hello_git.jpg" alt="Hello Git Image">
->>>>>>> hello-world-images
 </body>
 </html>
